[package]
name = "bread-scan"
version = "0.0.1"
edition = "2021"
description = "Scan dependencies to generate a .bread.yml file"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/bread-scan"

[dependencies]
cargo-manifest = "0.4.0"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
bread-common = { path = "submodules/bread-common" }
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["rt", "macros"] }
anyhow = "1.0.66"
structre = "0.0.1"
slog = "2.7.0"
sloggers = "2.1.1"
