[package]
name = "bread-scan"
version = "0.0.2"
edition = "2021"
description = "Scan dependencies to generate a .bread.yml file"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/bread-scan"
license = "ISC"

[dependencies]
cargo-manifest = "0.4.0"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["rt", "macros"] }
anyhow = "1.0.66"
structre = "0.0.1"
slog = "2.7.0"
sloggers = "2.1.1"
bread-common = "0.0.2"
url = "2.3.1"
toml = "0.5.11"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
governor = "0.5.1"
scraper = "0.14.0"
